--- a/serverside/templates/stakeholders/reglas/crear_regla.html
+++ b/serverside/templates/stakeholders/reglas/crear_regla.html
@@ -24,7 +24,7 @@
 
          </div>
          <div class="modal-footer">
-            <button id="boton_creacion" class="btn btn-primary" type="submit" onclick="registrar();">Confirmar</button>
+            <button id="boton_creacion" class="btn btn-primary" type="button" onclick="registrar();">Confirmar</button>
             <button class="btn btn-danger" type="button" onclick="cerrar_modal_creacion();">Cancelar</button>
          </div>
       </form>
