--- a/serverside/templates/stakeholders/reglas/editar_regla.html
+++ b/serverside/templates/stakeholders/reglas/editar_regla.html
@@ -24,7 +24,7 @@
                </div>
          <div class="modal-footer">
             
-            <button id="boton_edicion" class="btn btn-primary" type="submit" onclick="editar();">Confirmar</button>
+            <button id="boton_edicion" class="btn btn-primary" type="button" onclick="editar();">Confirmar</button>
             <button class="btn btn-danger" type="button" onclick="cerrar_modal_edicion();">Cancelar</button>
          </div>
       </form>
